F&GDEV/src/objects/Ad_Review_Detail__c.object
<CustomObject>
    <fields>
        <fullName>Ad_Review_Number__c</fullName>
        <formula>Marketing_Material__r.Ad_Review_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ad Review Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ad_Review_Priority__c</fullName>
        <formula>TEXT(Marketing_Material__r.Ad_Review_Priority__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ad Review Priority</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Admin_Review_of_Revisions__c</fullName>
        <label>Admin Review of Revisions</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Discussion_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Discussion Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Document_Availability__c</fullName>
        <formula>Marketing_Material__r.Ad_Review_Document_Status__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Document Availability</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FirstStatusSent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FirstStatusSent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Form_Description__c</fullName>
        <formula>Marketing_Material__r.Form_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Form Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Initial_Review__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Initial Review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Marketing_Material__c</fullName>
        <label>Marketing Material</label>
        <referenceTo>Marketing_Materials__c</referenceTo>
        <relationshipLabel>Ad Review Detail</relationshipLabel>
        <relationshipName>Ad_Review_Detail</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Mkt_Material_Form_Number__c</fullName>
        <formula>Marketing_Material__r.MktCombinedFormNumber__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mkt Material Form Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MyReviewOnHold__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MyReviewOnHold</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrigReviewDueDate__c</fullName>
        <label>OrigReviewDueDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Preliminary_PD_Product_Review__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Preliminary PD Product Review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Result_of_Review__c</fullName>
        <label>Result of Review</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Approved with Changes</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ReviewOutstandingDays__c</fullName>
        <formula>NOW() - CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ReviewOutstandingDays</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Review_Completed__c</fullName>
        <label>Review Completed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Review_Due__c</fullName>
        <label>Review Due</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Review_Started__c</fullName>
        <label>Review Started</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Review_Status__c</fullName>
        <formula>IF( ISBLANK( Review_Started__c ) , &quot;Not Started&quot;,  IF( ISBLANK( Review_Completed__c ) , IF( MyReviewOnHold__c =TRUE,&quot;OnHold&quot;,&quot;In Progress&quot;),  IF(  ISPICKVAL( Result_of_Review__c , &quot;Approved&quot;), &quot;Approved&quot;,  IF( Admin_Review_of_Revisions__c &gt; DATE(1980,1,1),&quot;Approved&quot;, &quot;Revisions Required&quot;) ) ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Review Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReviewerDaysToComplete__c</fullName>
        <formula>Review_Completed__c - CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ReviewerDaysToComplete</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reviewer_Comments__c</fullName>
        <label>Reviewer Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Reviewer_Department__c</fullName>
        <label>Reviewer Department</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Actuarial - Annuity</fullName>
                </value>
                <value>
                    <fullName>Actuarial - Life</fullName>
                </value>
                <value>
                    <fullName>Compliance</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
                <value>
                    <fullName>Marketing Communications</fullName>
                </value>
                <value>
                    <fullName>Product Development</fullName>
                </value>
                <value>
                    <fullName>Tax</fullName>
                </value>
                <value>
                    <fullName>Corporate</fullName>
                </value>
                <value>
                    <fullName>Operations</fullName>
                </value>
                <value>
                    <fullName>Underwriting</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reviewer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reviewer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Ad_Review_Detail</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Ad Review Detail</label>
    <listViews>
        <fullName>Ad_Review_In_Process</fullName>
        <columns>NAME</columns>
        <columns>Form_Description__c</columns>
        <columns>Reviewer_Department__c</columns>
        <columns>Reviewer__c</columns>
        <columns>Review_Due__c</columns>
        <columns>Review_Status__c</columns>
        <columns>Document_Availability__c</columns>
        <columns>Ad_Review_Number__c</columns>
        <columns>Mkt_Material_Form_Number__c</columns>
        <columns>Ad_Review_Priority__c</columns>
        <columns>Preliminary_PD_Product_Review__c</columns>
        <columns>Initial_Review__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Inactive__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Review_Completed__c</field>
            <operation>equals</operation>
        </filters>
        <label>AR In Process - All Groups</label>
    </listViews>
    <listViews>
        <fullName>Ad_Review_In_Process_AnnActuarial</fullName>
        <columns>NAME</columns>
        <columns>Ad_Review_Priority__c</columns>
        <columns>Ad_Review_Number__c</columns>
        <columns>Mkt_Material_Form_Number__c</columns>
        <columns>Form_Description__c</columns>
        <columns>Reviewer_Department__c</columns>
        <columns>Reviewer__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Document_Availability__c</columns>
        <columns>Review_Status__c</columns>
        <columns>Review_Due__c</columns>
        <columns>Review_Started__c</columns>
        <columns>Preliminary_PD_Product_Review__c</columns>
        <columns>Initial_Review__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Inactive__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Review_Completed__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Reviewer_Department__c</field>
            <operation>equals</operation>
            <value>Actuarial - Annuity</value>
        </filters>
        <label>AR In Process -Annuity Actuarial -All</label>
    </listViews>
    <listViews>
        <fullName>Ad_Review_In_Process_AnnActuarial_High</fullName>
        <columns>NAME</columns>
        <columns>Ad_Review_Priority__c</columns>
        <columns>Ad_Review_Number__c</columns>
        <columns>Mkt_Material_Form_Number__c</columns>
        <columns>Form_Description__c</columns>
        <columns>Reviewer_Department__c</columns>
        <columns>Reviewer__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Document_Availability__c</columns>
        <columns>Review_Status__c</columns>
        <columns>Review_Due__c</columns>
        <columns>Review_Started__c</columns>
        <columns>Preliminary_PD_Product_Review__c</columns>
        <columns>Initial_Review__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Inactive__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Review_Completed__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Reviewer_Department__c</field>
            <operation>equals</operation>
            <value>Actuarial - Annuity</value>
        </filters>
        <filters>
            <field>Ad_Review_Priority__c</field>
            <operation>equals</operation>
            <value>2 - High</value>
        </filters>
        <label>AR In Process -Annuity Actuarial - High</label>
    </listViews>
    <listViews>
        <fullName>Ad_Review_In_Process_AnnActuarial_Urgent</fullName>
        <columns>NAME</columns>
        <columns>Ad_Review_Priority__c</columns>
        <columns>Ad_Review_Number__c</columns>
        <columns>Mkt_Material_Form_Number__c</columns>
        <columns>Form_Description__c</columns>
        <columns>Reviewer_Department__c</columns>
        <columns>Reviewer__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Document_Availability__c</columns>
        <columns>Review_Status__c</columns>
        <columns>Review_Due__c</columns>
        <columns>Review_Started__c</columns>
        <columns>Preliminary_PD_Product_Review__c</columns>
        <columns>Initial_Review__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Inactive__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Review_Completed__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Reviewer_Department__c</field>
            <operation>equals</operation>
            <value>Actuarial - Annuity</value>
        </filters>
        <filters>
            <field>Ad_Review_Priority__c</field>
            <operation>equals</operation>
            <value>1 - Urgent</value>
        </filters>
        <label>AR In Process -Annuity Actuarial -Urgent</label>
    </listViews>
    <listViews>
        <fullName>Ad_Review_In_Process_Compliance</fullName>
        <columns>NAME</columns>
        <columns>Ad_Review_Priority__c</columns>
        <columns>Ad_Review_Number__c</columns>
        <columns>Mkt_Material_Form_Number__c</columns>
        <columns>Form_Description__c</columns>
        <columns>Reviewer_Department__c</columns>
        <columns>Reviewer__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Document_Availability__c</columns>
        <columns>Review_Status__c</columns>
        <columns>Review_Due__c</columns>
        <columns>Review_Started__c</columns>
        <columns>Preliminary_PD_Product_Review__c</columns>
        <columns>Initial_Review__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Inactive__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Review_Completed__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Reviewer_Department__c</field>
            <operation>equals</operation>
            <value>Compliance</value>
        </filters>
        <label>AR In Process -Compliance -All</label>
    </listViews>
    <listViews>
        <fullName>Ad_Review_In_Process_Compliance_High</fullName>
        <columns>NAME</columns>
        <columns>Ad_Review_Priority__c</columns>
        <columns>Ad_Review_Number__c</columns>
        <columns>Mkt_Material_Form_Number__c</columns>
        <columns>Form_Description__c</columns>
        <columns>Reviewer_Department__c</columns>
        <columns>Reviewer__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Document_Availability__c</columns>
        <columns>Review_Status__c</columns>
        <columns>Review_Due__c</columns>
        <columns>Review_Started__c</columns>
        <columns>Preliminary_PD_Product_Review__c</columns>
        <columns>Initial_Review__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Inactive__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Review_Completed__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Reviewer_Department__c</field>
            <operation>equals</operation>
            <value>Compliance</value>
        </filters>
        <filters>
            <field>Ad_Review_Priority__c</field>
            <operation>equals</operation>
            <value>2 - High</value>
        </filters>
        <label>AR In Process -Compliance -High</label>
    </listViews>
    <listViews>
        <fullName>Ad_Review_In_Process_Compliance_Urgent</fullName>
        <columns>NAME</columns>
        <columns>Ad_Review_Priority__c</columns>
        <columns>Ad_Review_Number__c</columns>
        <columns>Mkt_Material_Form_Number__c</columns>
        <columns>Form_Description__c</columns>
        <columns>Reviewer_Department__c</columns>
        <columns>Reviewer__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Document_Availability__c</columns>
        <columns>Review_Status__c</columns>
        <columns>Review_Due__c</columns>
        <columns>Review_Started__c</columns>
        <columns>Preliminary_PD_Product_Review__c</columns>
        <columns>Initial_Review__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Inactive__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Review_Completed__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Reviewer_Department__c</field>
            <operation>equals</operation>
            <value>Compliance</value>
        </filters>
        <filters>
            <field>Ad_Review_Priority__c</field>
            <operation>equals</operation>
            <value>1 - Urgent</value>
        </filters>
        <label>AR In Process -Compliance - Urgent</label>
    </listViews>
    <listViews>
        <fullName>Ad_Review_In_Process_Dolly</fullName>
        <booleanFilter>1 AND 2 AND 3</booleanFilter>
        <columns>NAME</columns>
        <columns>Ad_Review_Priority__c</columns>
        <columns>Ad_Review_Number__c</columns>
        <columns>Reviewer__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Document_Availability__c</columns>
        <columns>Review_Status__c</columns>
        <columns>Review_Due__c</columns>
        <columns>Review_Started__c</columns>
        <columns>Preliminary_PD_Product_Review__c</columns>
        <columns>Initial_Review__c</columns>
        <columns>Mkt_Material_Form_Number__c</columns>
        <columns>Form_Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Inactive__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Review_Completed__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Reviewer__c</field>
            <operation>contains</operation>
            <value>Rusinko</value>
        </filters>
        <label>AR In Process - Rusinko</label>
    </listViews>
    <listViews>
        <fullName>Ad_Review_In_Process_High</fullName>
        <columns>NAME</columns>
        <columns>Ad_Review_Priority__c</columns>
        <columns>Ad_Review_Number__c</columns>
        <columns>Mkt_Material_Form_Number__c</columns>
        <columns>Form_Description__c</columns>
        <columns>Reviewer_Department__c</columns>
        <columns>Reviewer__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Document_Availability__c</columns>
        <columns>Review_Status__c</columns>
        <columns>Review_Due__c</columns>
        <columns>Review_Started__c</columns>
        <columns>Preliminary_PD_Product_Review__c</columns>
        <columns>Initial_Review__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Inactive__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Review_Completed__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Ad_Review_Priority__c</field>
            <operation>equals</operation>
            <value>2 - High</value>
        </filters>
        <label>AR In Process - All Groups - High</label>
    </listViews>
    <listViews>
        <fullName>Ad_Review_In_Process_LifeActuarial</fullName>
        <columns>NAME</columns>
        <columns>Ad_Review_Priority__c</columns>
        <columns>Ad_Review_Number__c</columns>
        <columns>Mkt_Material_Form_Number__c</columns>
        <columns>Form_Description__c</columns>
        <columns>Reviewer_Department__c</columns>
        <columns>Reviewer__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Document_Availability__c</columns>
        <columns>Review_Status__c</columns>
        <columns>Review_Due__c</columns>
        <columns>Review_Started__c</columns>
        <columns>Preliminary_PD_Product_Review__c</columns>
        <columns>Initial_Review__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Inactive__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Review_Completed__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Reviewer_Department__c</field>
            <operation>equals</operation>
            <value>Actuarial - Life</value>
        </filters>
        <label>AR In Process -Life Actuarial -All</label>
    </listViews>
    <listViews>
        <fullName>Ad_Review_In_Process_LifeActuarial_High</fullName>
        <columns>NAME</columns>
        <columns>Ad_Review_Priority__c</columns>
        <columns>Ad_Review_Number__c</columns>
        <columns>Mkt_Material_Form_Number__c</columns>
        <columns>Form_Description__c</columns>
        <columns>Reviewer_Department__c</columns>
        <columns>Reviewer__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Document_Availability__c</columns>
        <columns>Review_Status__c</columns>
        <columns>Review_Due__c</columns>
        <columns>Review_Started__c</columns>
        <columns>Preliminary_PD_Product_Review__c</columns>
        <columns>Initial_Review__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Inactive__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Review_Completed__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Reviewer_Department__c</field>
            <operation>equals</operation>
            <value>Actuarial - Life</value>
        </filters>
        <filters>
            <field>Ad_Review_Priority__c</field>
            <operation>equals</operation>
            <value>2 - High</value>
        </filters>
        <label>AR In Process -Life Actuarial - High</label>
    </listViews>
    <listViews>
        <fullName>Ad_Review_In_Process_LifeActuarial_Urgent</fullName>
        <columns>NAME</columns>
        <columns>Ad_Review_Priority__c</columns>
        <columns>Ad_Review_Number__c</columns>
        <columns>Mkt_Material_Form_Number__c</columns>
        <columns>Form_Description__c</columns>
        <columns>Reviewer_Department__c</columns>
        <columns>Reviewer__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Document_Availability__c</columns>
        <columns>Review_Status__c</columns>
        <columns>Review_Due__c</columns>
        <columns>Review_Started__c</columns>
        <columns>Preliminary_PD_Product_Review__c</columns>
        <columns>Initial_Review__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Inactive__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Review_Completed__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Reviewer_Department__c</field>
            <operation>equals</operation>
            <value>Actuarial - Life</value>
        </filters>
        <filters>
            <field>Ad_Review_Priority__c</field>
            <operation>equals</operation>
            <value>1 - Urgent</value>
        </filters>
        <label>AR In Process -Life Actuarial - Urgent</label>
    </listViews>
    <listViews>
        <fullName>Ad_Review_In_Process_Urgent</fullName>
        <columns>NAME</columns>
        <columns>Ad_Review_Priority__c</columns>
        <columns>Ad_Review_Number__c</columns>
        <columns>Mkt_Material_Form_Number__c</columns>
        <columns>Form_Description__c</columns>
        <columns>Reviewer_Department__c</columns>
        <columns>Reviewer__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Document_Availability__c</columns>
        <columns>Review_Status__c</columns>
        <columns>Review_Due__c</columns>
        <columns>Review_Started__c</columns>
        <columns>Preliminary_PD_Product_Review__c</columns>
        <columns>Initial_Review__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Inactive__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Review_Completed__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Ad_Review_Priority__c</field>
            <operation>equals</operation>
            <value>1 - Urgent</value>
        </filters>
        <label>AR In Process - All Groups - Urgent</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Ad_Review_Number__c</columns>
        <columns>Form_Description__c</columns>
        <columns>Reviewer__c</columns>
        <columns>Reviewer_Department__c</columns>
        <columns>Review_Completed__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Ad Review Detail</label>
    </listViews>
    <nameField>
        <displayFormat>ARD-{000000}</displayFormat>
        <label>Ad Review Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ad Review Detail</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>